Local CDK network support
Signed-off-by: Hitesh Sharma <hitesh.sharma@zeeve.io>

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@uniswap/v3-sdk",
+  "name": "@hitesh.sharma_/v3-sdk",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
-  "version": "3.10.0",
-  "description": "⚒️ An SDK for building applications on top of Uniswap V3",
+  "version": "3.10.0-cdk-2",
+  "description": "⚒️ An SDK for building applications",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-v3-sdk.git",
+  "repository": "https://github.com/hitesh-zeeve/v3-sdk.git",
   "keywords": [
     "uniswap",
     "ethereum"
@@ -26,7 +26,7 @@
   "dependencies": {
     "@ethersproject/abi": "^5.0.12",
     "@ethersproject/solidity": "^5.0.9",
-    "@uniswap/sdk-core": "^4",
+    "@hitesh.sharma_/sdk-core": "4.0.6-cdk-0",
     "@uniswap/swap-router-contracts": "^1.2.1",
     "@uniswap/v3-periphery": "^1.1.1",
     "@uniswap/v3-staker": "1.0.0",
